2010-07-09  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: When parsing static resources we don't
	  actually care if target_parent_ptr is null or not. We don't
	  use it. Fixes parts of drt 350.

2010-07-07  Jackson Harper  <jackson@ximian.com>

	* XamlContext.cs: Add some properties for tempalate binding. Also
	add a default constructor.  The XamlParser will always have a
	XamlContext now by default, it will just be empty.

	* XamlPropertySetter.cs: Support setting
	TemplateBindingExpressions, also scope out the temp binding vars
	so we dont pollute local.

2010-07-02  Jackson Harper  <jackson@ximian.com>

	* XamlPropertySetter.cs: Fix typo, add in the Binding setter code.

2010-07-02  Jackson Harper  <jackson@ximian.com>

	* XamlPropertySetter.cs: Add the ability to lookup the
	DependencyProperty that corresponds to a property setter.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* XamlContext.cs: New class, used with parsing templates.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* XamlLoaderCallbacks.cs: Add the template parsing callback.

2010-06-23  Jackson Harper  <jackson@ximian.com>

	* MarkupExpressionParser.cs: Split this up a little bit so it can
	be used for the SL3 parser (from now on we will refer to this as
	'xaml parser classic') and the SL4 parser.

	* ManagedXamlLoader.cs: Use the SL3 parser.